<resources>
    <string name="app_name">SuwenAndroid2016V1</string>
    <string name="main_tab_01">素问</string>
    <string name="main_tab_02">搜索</string>
    <string name="main_tab_03">我的</string>
    <string name="errors_timeout">服务器超时</string>
    <string name="errors_no_network">尚未连接到互联网。</string>
    <string name="empty_content">空内容</string>
    <string name="json_error">数据解析异常</string>
    <string name="pull_to_refresh">下拉刷新...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="release_to_refresh">放开刷新...</string>
    <string name="pull_to_load_more">上拉加载...</string>
    <string name="loading_datas">正在加载...</string>
    <string name="release_to_load">松开加载...</string>
    <string name="search_hint_text">请输入关键字/身体症状</string>
    <string name="search_text">搜索</string>
    <string name="clean_search_history">清空搜索历史</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_title">温馨提示</string>
    <!--主页title-->
    <string-array name="array_title_name">
        <item>素问</item>
        <item>搜索</item>
        <item>我的</item>
    </string-array>
    <string-array name="array_main_humble">
        <item>推荐给好友</item>
        <item>我的收藏</item>
        <item>我的关注</item>
        <item>客服电话</item>
    </string-array>
</resources>
