<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/mainActivity_bottom_height"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/main_tab_homepage"
            android:text="@string/main_tab_01"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/ic_launcher"
            style="@style/MainBottomStyle" />
        <RadioButton
            android:id="@+id/main_tab_search"
            android:text="@string/main_tab_02"
            android:drawableTop="@drawable/main_tab01_select"
            style="@style/MainBottomStyle" />
        <RadioButton
            android:id="@+id/main_tab_min"
            android:text="@string/main_tab_03"
            android:drawableTop="@mipmap/ic_launcher"
            style="@style/MainBottomStyle" />
    </RadioGroup>
</RelativeLayout>
