<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.suwen.suwenandroid2016v1.fragment.SuWenFragment">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/cornner_search_bg"
            android:drawableLeft="@mipmap/ic_search_grap"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/ic_del_white"
            android:gravity="center_vertical"
            android:hint="@string/search_hint_text"
            android:padding="6dp"
            android:textColorHint="@color/color_grap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:paddingTop="10dp"
            android:text="@string/search_text" />
    </LinearLayout>
    <com.suwen.suwenandroid2016v1.views.FlowLayout
        android:id="@+id/flow_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar">

    </com.suwen.suwenandroid2016v1.views.FlowLayout>

    <ListView
        android:id="@+id/lv_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flow_search"
        android:layout_margin="10dp"
        android:cacheColorHint="@color/color_transparent"
        android:divider="@color/color_grap"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_search_history"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_grap"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_del_white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/clean_search_history" />
    </LinearLayout>
</RelativeLayout>